# VCPlayer

./: .gitignore  App.cpp  App.h  CMakeLists.txt  FileDialog.cpp  FileDialog.h  LICENSE  README.md  VideoPlayer.cpp  VideoPlayer.h  main.cpp  testVideoplayer.cpp  txt
ImGuiFileDialog/: ImGuiFileDialogConfig.h
